# python-sdk

./: .gitignore  PROTOCOL_PIN.json  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pr-title.yml
conformance/: README.md
conformance/vectors/invalid/: agent-card-with-permissions.json  approval-final-by-agent.json  artifact-with-inline-content.json  command-missing-signature.json  context-package-without-event-provenance.json  conversation-work-item-without-primary.json  event-zero-sequence.json  evidence-without-criteria.json  extension-overrides-core.json  group-archived-without-snapshot.json  group-snapshot-without-policy-log.json  lease-renewed-without-timestamp.json  membership-provisional-without-context.json  message-authorizes-action.json  mission-legacy-completed-state.json  mission-without-final-human-approval.json  presence-with-credentials.json  websocket-partial-stream.json  work-contract-without-acceptance.json  work-item-active-without-owner.json  work-item-legacy-accepted-state.json
conformance/vectors/valid/: agent-card.json  approval.json  artifact.json  child-approval.json  child-mission.json  command.json  context-package.json  conversation.json  error.json  event.json  evidence.json  extension-profile.json  group-snapshot.json  group.json  lease.json  membership.json  message.json  mission.json  presence-record.json  websocket-frame.json  work-contract.json  work-item.json
docs/superpowers/plans/: 2026-07-20-bundle-conformance-resources.md
examples/: create_dev_registry.py  signed_document_codec.py
poc/: README.md
schemas/: README.md  agent-card.schema.json  approval.schema.json  artifact.schema.json  command.schema.json  common.schema.json  context-package.schema.json  conversation.schema.json  error.schema.json  event.schema.json  evidence.schema.json  extension-profile.schema.json  group-snapshot.schema.json  group.schema.json  lease.schema.json  membership.schema.json  message.schema.json  mission.schema.json  presence-record.schema.json  websocket-frame.schema.json  work-contract.schema.json  work-item.schema.json
src/missionweave/: __init__.py  agent.py  artifacts.py  auth.py  canonical.py  cli.py  conformance.py  context.py  control.py  core.py  crypto.py  delegation.py  documents.py  execution.py  gateway.py  local_store.py  models.py  offline.py  poc.py  policy.py  registry.py  replay.py  scheduler.py  store.py  wire.py
src/missionweaveprotocol/: __init__.py  agent.py  artifacts.py  auth.py  budget.py  bundle.py  canonical.py  cli.py  conformance.py  context.py  control.py  core.py  crypto.py  delegation.py  documents.py  gateway.py  ingress.py  lease.py  local_store.py  models.py  offline.py  poc.py  policy.py  registry.py  replay.py  scheduler.py  schema_formats.py  signed_documents.py  store.py  wire.py
tests/: __init__.py  test_artifacts.py  test_auth.py  test_authoritative_budget.py  test_authoritative_lease.py  test_budget.py  test_cli.py  test_conformance.py  test_context.py  test_control.py  test_core.py  test_delegation.py  test_dev_registry.py  test_documents.py  test_execution.py  test_gateway.py  test_lease.py  test_local_store.py  test_localized_readmes.py  test_offline.py  test_package.py  test_poc.py  test_policy.py  test_protocol_pin.py  test_registry.py  test_replay.py  test_scheduler.py  test_signed_documents.py  test_wire.py
