[project]
name = "missionweaveprotocol"
version = "0.1.0"
description = "Official Python SDK and reference implementation for the MissionWeaveProtocol."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "MissionWeaveProtocol Contributors" }]
dependencies = [
  "aiosqlite>=0.21.0",
  "asyncpg>=0.30.0",
  "cryptography>=45.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "jsonschema>=4.24.0",
  "pydantic>=2.11.0",
  "rfc8785>=0.1.4",
  "sqlalchemy>=2.0.41",
  "typer>=0.16.0",
  "uvicorn[standard]>=0.47.0",
  "websockets>=15.0.0",
]

[project.urls]
Protocol = "https://github.com/missionweaveprotocol/missionweaveprotocol"
Repository = "https://github.com/missionweaveprotocol/python-sdk"

[project.optional-dependencies]
dev = [
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.12.0",
  "types-jsonschema>=4.24.0.20250528",
]

[project.scripts]
missionweaveprotocol-server = "missionweaveprotocol.cli:server"
missionweaveprotocol-demo = "missionweaveprotocol.cli:demo"
missionweaveprotocol-conformance = "missionweaveprotocol.cli:conformance"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/missionweaveprotocol"]

[tool.hatch.build.targets.wheel.force-include]
"src/missionweaveprotocol/py.typed" = "missionweaveprotocol/py.typed"
"schemas" = "missionweaveprotocol/schemas"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["missionweaveprotocol"]
